# mph-agent

./: BUILD.md  README.md  build-installer.ps1  cli.py  main.py  pyproject.toml
.github/workflows/: build-desktop-ci.yml  build-desktop.yml
agent/: __init__.py
agent/core/: __init__.py  dependencies.py  events.py  session.py
agent/executor/: comsol_official_api_wrappers.py  comsol_runner.py  java_api_controller.py  java_generator.py
agent/memory/: __init__.py  memory_agent.py  store.py
agent/planner/: __init__.py  context.py  material_agent.py  mesh_agent.py  orchestrator.py  physics_agent.py  study_agent.py
agent/react/: __init__.py  action_executor.py  error_collector.py  exceptions.py  iteration_controller.py  react_agent.py  reasoning_engine.py
agent/run/: __init__.py  actions.py  plan_mode.py  tui_bridge.py
agent/skills/: __init__.py  api_catalog_builder.py  injector.py
agent/utils/: config.py  context_manager.py  env_check.py  llm.py  prompt_manager.py
desktop/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
desktop/scripts/: bridge.spec  build-bridge.ps1  download-jdk11.ps1
desktop/src/: App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: BRIDGE-ERROR-LOCATIONS.md  bridge.rs
docs/: README.md
docs/architecture/: architecture.md
docs/getting-started/: BRIDGE-WORKING-SNAPSHOT.md  CONFIG.md  CONTEXT.md  EXAMPLE.md  INSTALL.md
docs/project/: PUBLISH.md
docs/release/: RELEASE-v0.1.0.md
prompts/planner/: material_planner.txt  mesh_planner.txt  orchestrator_decompose.txt  physics_planner.txt
prompts/react/: reasoning.txt
schemas/: __init__.py  geometry.py  material.py  mesh.py  physics.py  study.py  task.py
scripts/: build.bat  build.py  build.sh  dev_test.py  py_to_mph_minimal.py  run_agent.py  run_heat_test.py
skills/comsol-exceptions/: SKILL.md
tests/: test_executor.py  test_integration.py  test_react.py  test_schemas.py  test_skills.py
(+32 files in other folders)
